2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Clean up DND code.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Clean up last EOS handling.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-gst.c: (player_set_file):
	* libmuine/player-xine.c: (player_set_file):

	Remove state restoration code. It is done in Player already.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Remove obsoleted GConfClient property.

2004-12-26  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/About.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/Muine.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:
	* src/StockIcons.cs:
	
	Made all variables private and added accessor properties where 
	appropriate.

	* src/CoverDatabase.cs:
	
	Changed LoadedCover from a class to a struct.

	* src/SongDatabase.cs:

	Changed ChangedSong from a class to a struct.

	* src/About.cs:
	
	Replaced "version" with the public constant "Version" and removed
	the related property.

	* src/CoverDatabase.cs:

	Made AlbumCoverSize constant.

	* src/AddSongWindow.cs:
	
	Made FakeLength constant.

2004-12-26  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/SignalUtils.cs:

	Added a SignalUtils class with SignalDelegates and SignalConnect which
	wraps g_signal_connect_data.

	* src/HandleView.cs:
	* src/MmKeys.cs:
	* src/Player.cs:
	
	Changed all SignalDelegates to use the ones in SignalUtils. Also
	changed the calls to g_signal_connect_data to use 
	SignalUtils.SignalConnect. Removed SignalDelegates and 
	g_signal_connect_data.

2004-12-26  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/CoverDatabase.cs:
	* src/FileSelector.cs:
	* src/GnomeProxy.cs:
	* src/InfoWindow.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

        Cleaned up GConf code.

2004-12-26  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:
